--- a/index.html
+++ b/index.html
@@ -3,105 +3,39 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MOTORSPORT NEXUS | OMNI DATABASE</title>
-    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700;900&family=Inter:wght@300;400;700&display=swap" rel="stylesheet">
+    <title>MOTORSPORT 360 | DATABASE</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&family=Rajdhani:wght@500;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="scanline"></div>
 
-    <header class="main-header">
-        <div class="logo">
-            <div class="logo-top">MOTOR<span class="accent-text">NEXUS</span></div>
-            <div class="sub-brand">// UNIVERSAL_RACING_ARCHIVE</div>
+    <nav class="navbar">
+        <div class="logo">MOTORSPORT <span>360</span></div>
+        <div class="search-box">
+            <input type="text" id="searchInput" placeholder="ПОШУК ПО БАЗІ ДАНИХ...">
         </div>
-        <div class="sys-status">DATA_SYNC: [ COMPLETE ]</div>
-    </header>
+    </nav>
 
-    <main>
-        <section class="hero">
-            <h1 class="glitch" data-text="MOTORSPORT">MOTORSPORT</h1>
-            <p class="hero-tagline">ПОВНИЙ АРХІВ СВІТОВОГО АВТО- ТА МОТОСПОРТУ</p>
-        </section>
-
-        <div class="container">
-            
-            <section class="special-project-section reveal">
-                <h2 class="cluster-title">// SPECIAL_LOG: THE_HYPERCAR</h2>
-                <div class="glass-card card-499p project-card">
-                    <div class="project-content">
-                        <span class="label">LE MANS WINNER / LMH CLASS</span>
-                        <h3>FERRARI 499P</h3>
-                        <p>Вершина інженерної думки Ferrari. Гібридний прототип, створений для панування в гонках на витривалість. Легендарне повернення до перемог у Ле-Мані.</p>
-                        <div class="tech-specs-large">
-                            <div class="spec-item"><span>POWER:</span> 680 HP (SYSTEM)</div>
-                            <div class="spec-item"><span>WEIGHT:</span> 1030 KG</div>
-                            <div class="spec-item"><span>ENGINE:</span> 3.0L V6 TWIN TURBO</div>
-                        </div>
-                        <div class="status-badge">MISSION: DOMINANCE</div>
-                    </div>
-                    <div class="project-image">
-                        <img src="https://ferrari.scene7.com/is/image/ferrari/639b13a7693c460023c3ca54-tofm_rq_2983340_main3_1250x700" alt="Ferrari 499P">
-                    </div>
-                </div>
-            </section>
-
-            <h2 class="cluster-title">// 01_ASPHALT_CIRCUIT</h2>
-            <div class="series-grid">
-                <div class="glass-card series-card card-f1 reveal"><span class="label">FORMULA</span><h3>ФОРМУЛЬНІ ГОНКИ</h3><p>F1, F2, F3, F4. Вершина аеродинаміки.</p></div>
-                <div class="glass-card series-card card-gt reveal"><span class="label">GT_ELITE</span><h3>GT ГОНКИ (GT2, GT3, GT4)</h3><p>Суперкари Ferrari, Porsche, Lambo.</p></div>
-                <div class="glass-card series-card card-touring reveal"><span class="label">TOURING</span><h3>ТУРИНГОВІ ГОНКИ</h3><p>TCR, BTCC, DTM. Контактна боротьба.</p></div>
-                <div class="glass-card series-card card-wec reveal"><span class="label">ENDURANCE</span><h3>ГОНКИ НА ВИТРИВАЛІСТЬ</h3><p>WEC, IMSA, 24h Le Mans.</p></div>
-                <div class="glass-card series-card card-indy reveal"><span class="label">OVALS</span><h3>ОВАЛЬНІ ТА КОЛЬЦЕВІ</h3><p>IndyCar, NASCAR. Максимальна швидкість.</p></div>
-            </div>
-
-            <h2 class="cluster-title">// 02_STYLE_&_SPEED</h2>
-            <div class="series-grid">
-                <div class="glass-card series-card card-drift reveal"><span class="label">DRIFTING</span><h3>ДРИФТ</h3><p>Мистецтво заносу. Formula Drift, D1.</p></div>
-                <div class="glass-card series-card card-drag reveal"><span class="label">ACCEL</span><h3>ДРАГ-РЕЙСИНГ</h3><p>Прискорення на 402 метри. Top Fuel.</p></div>
-                <div class="glass-card series-card card-time reveal"><span class="label">ATTACK</span><h3>ТАЙМ-АТТАК</h3><p>Битва за ідеальне коло.</p></div>
-                <div class="glass-card series-card card-hill reveal"><span class="label">MOUNTAIN</span><h3>HILL CLIMB</h3><p>Pikes Peak. Гонка в хмари.</p></div>
-                <div class="glass-card series-card card-electric reveal"><span class="label">ELECTRIC</span><h3>ЕЛЕКТРИЧНІ СЕРІЇ</h3><p>Formula E, Extreme E.</p></div>
-            </div>
-
-            <h2 class="cluster-title">// 03_RALLY_&_OFFROAD</h2>
-            <div class="series-grid">
-                <div class="glass-card series-card card-rally reveal"><span class="label">WRC</span><h3>РАЛІ ТА РАЛІ-СПРИНТ</h3><p>Гравій, сніг, лід та асфальт.</p></div>
-                <div class="glass-card series-card card-rx reveal"><span class="label">CROSS</span><h3>РАЛІ-КРОС ТА АВТОКРОС</h3><p>Змішане покриття, висока динаміка.</p></div>
-                <div class="glass-card series-card card-raid reveal"><span class="label">RAID</span><h3>РАЛІ-РЕЙДИ (ДАКАР)</h3><p>Марафони через пустелі та дюни.</p></div>
-                <div class="glass-card series-card card-offroad reveal"><span class="label">4X4</span><h3>ТРОФІ, ТРІАЛ, ДЖИП-ТРІАЛ</h3><p>Екстремальне бездоріжжя.</p></div>
-                <div class="glass-card series-card card-truck reveal"><span class="label">BAJA</span><h3>БАГГІ ТА ТРОФІ-ТРАКИ</h3><p>Стрибки пустелею на швидкості.</p></div>
-            </div>
-
-            <h2 class="cluster-title">// 04_TWO_WHEEL_UNIVERSE</h2>
-            <div class="series-grid">
-                <div class="glass-card series-card card-motogp reveal"><span class="label">MOTO_GP</span><h3>МОТОШОСЕЙНІ ТА СУПЕРБАЙК</h3><p>Елітні кільцеві мотоперегони.</p></div>
-                <div class="glass-card series-card card-mx reveal"><span class="label">CROSS</span><h3>МОТОКРОС ТА СУПЕРКРОС</h3><p>MXGP. Стрибки та бруд.</p></div>
-                <div class="glass-card series-card card-enduro reveal"><span class="label">ENDURO</span><h3>ЕНДУРО ТА ТРІАЛ</h3><p>Hard Enduro, подолання каміння.</p></div>
-                <div class="glass-card series-card card-speedway reveal"><span class="label">SPEED</span><h3>СПІДВЕЙ ТА АЙС-СПІДВЕЙ</h3><p>Гонки без гальм по колу.</p></div>
-                <div class="glass-card series-card card-moto-raid reveal"><span class="label">MOTO_RAID</span><h3>МОТО-РАЛІ-РЕЙДИ</h3><p>Дакар на двох колесах.</p></div>
-            </div>
-
-            <h2 class="cluster-title">// 05_EXTRA_DATABASE</h2>
-            <div class="series-grid">
-                <div class="glass-card series-card card-kart reveal"><span class="label">BASE</span><h3>КАРТИНГ</h3><p>Фундамент для кожного гонщика.</p></div>
-                <div class="glass-card series-card card-classic reveal"><span class="label">RETRO</span><h3>ІСТОРИЧНІ ГОНКИ</h3><p>Класичні авто минулих епох.</p></div>
-                <div class="glass-card series-card card-snow reveal"><span class="label">WINTER</span><h3>СНІГОХОДИ ТА КВАДРОСПОРТ</h3><p>Зимовий та чотириколісний екстрим.</p></div>
-            </div>
-
-            <section class="media-section reveal">
-                <h2 class="section-title">// MEDIA_ACCESS: FERRARI_CINEMA</h2>
-                <div class="movie-box glass-card">
-                    <p>Історія людини, що створила найвідоміший бренд у світі гонок.</p>
-                    <a href="https://uakino.best/filmy/genre_sport/24906-ferrari.html" target="_blank" class="btn-ui">WATCH FERRARI ONLINE</a>
-                </div>
-            </section>
+    <main class="container">
+        <div class="filter-bar">
+            <button class="btn active" onclick="filterSports('all')">УСІ СИСТЕМИ</button>
+            <button class="btn" onclick="filterSports('Asphalt')">АСФАЛЬТ</button>
+            <button class="btn" onclick="filterSports('Off-Road')">БЕЗДОРІЖЖЯ</button>
+            <button class="btn" onclick="filterSports('Bikes')">МОТО</button>
+            <button class="btn" onclick="filterSports('Special')">СПЕЦІАЛЬНІ</button>
         </div>
+
+        <div class="grid" id="grid"></div>
     </main>
 
-    <footer>
-        <p>GLOBAL MOTORSPORT NEXUS © 2026 // ALL_SYSTEMS_GO</p>
-    </footer>
+    <div id="infoModal" class="modal">
+        <div class="modal-content">
+            <span class="close-btn">&times;</span>
+            <div id="modalCat" class="modal-cat"></div>
+            <h2 id="modalTitle"></h2>
+            <div id="modalBody" class="modal-text"></div>
+        </div>
+    </div>
 
     <script src="script.js"></script>
 </body>
